LU-4179 mdt: skip open lock enqueue during resent

Skip open lock enqueue, if the open lock has been
acquired(mdt_intent_fixup_resent) during resent.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I625ca438e28520416ee2af884d0a9f9e6f21cf2e
Reviewed-on: http://review.whamcloud.com/8173
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>